--- a/src/main/resources/templates/guest_registration.html
+++ b/src/main/resources/templates/guest_registration.html
@@ -34,6 +34,6 @@
             </form>
         </main>
 
-        <a href="../../">Home</a>
+        <a href="../../webapp">Home</a>
     </body>
 </html>
