--- a/src/main/resources/templates/user_delete.html
+++ b/src/main/resources/templates/user_delete.html
@@ -15,6 +15,6 @@
             </form>
         </main>
 
-        <a href="../../">Home</a>
+        <a href="../../webapp">Home</a>
     </body>
 </html>
