--- a/src/main/resources/templates/user_profile.html
+++ b/src/main/resources/templates/user_profile.html
@@ -13,6 +13,6 @@
             <p><b>surname:</b> <span th:text = "${lastName}"></span></p>
             <p><b>age:</b> <span th:text = "${age}"></span></p>
 
-        <a href="../../">Home</a>
+        <a href="../../webapp">Home</a>
     </body>
 </html>
